added multivariate clustering notebook

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ Exploration_V2/datasets/
 Exploration_V2/clustering_TS/clust_performance_eval/
 Exploration_V2/clustering_TS/proximity_measures/
 Exploration_V2/mapasDE_classes_af/
+NOTAS.txt
