--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@ Exploration_V2/clustering_TS/clust_performance_eval/
 Exploration_V2/clustering_TS/proximity_measures/
 Exploration_V2/mapasDE_classes_af/
 NOTAS.txt
+Exploration_V3/antifragilidades_datasets
+Exploration_V3/pairing_data
